*** 20010704_1 by jdc
The Monster Update(tm) for hybrid-6 and cryptlinks.

NOTE:  This apparently should work with hybrid-7, but it has one minor
bug which I have yet to be able to figure out.  Other than that, the
actual authentication seems to be working fine; there's got to be a
missing line of code somewhere, or something not being initialised right;
something like that.  An example of this problem (pentarou.parodius.com
is hybrid-6 with this code):

*** Connecting to 255.255.255.255[hybrid.best.net].9000
*** Notice -- Link with hybrid.best.net[unknown@255.255.255.255] established: (TS ZIP QS EX CHW ENC:CAST/128,CAST/128) link
*** Notice -- inflate() error(-3): unknown compression method
*** Notice -- hybrid.best.net was connected for 1 seconds.  0/1 sendK/recvK.
*** Notice -- Server hybrid.best.net split from pentarou.parodius.com

It looks to me as if the connection is being terminated immediately after
zlib kicks in.  The other end of the link (hybrid.best.net) shows one
obvious error which should be the key to fixing this bug:

*** Notice -- Unauthorized server connection attempt from pentarou.parodius.com: Invalid cipher

Please note despite the zlib-style error, I ***STRONGLY*** doubt it has
anything to do with zlib.  Either way, I'm submitting this because it's a
_MUCH_ further along than before, and it actually does work except for the
one small bug.  :-)  I believe the bug might be in s_serv.c somewhere
(particularly with the "ENC:" stuff), but someone will have to go over all
of this alongside me to figure out where the real bug is.  Once it's
squashed, we're practically ready to go!

- doc/cryptlink.txt
    * Updated with the latest protocol information (same as hybrid-7s).

- doc/example.conf
    * Properly document how to use the new "," cipher pre-requisite in
      the passwd field.

- include/client.h
    * Changed "ciphers" definition from char * to struct CipherDef *.

- include/m_commands.h